refactor: harden security and remove dead admin code